kubernetes/cluster/active/apps/transmute/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted file converter.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: transmute.svg
    gethomepage.dev/name: Transmute
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=transmute"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "convert.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: transmute
          namespace: transmute
          port: 3313
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
